<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/calc_history_text"
        android:textSize="20sp"
        tools:text="77 - 88 =" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/calc_result_text"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:text="-11" />

    <TableLayout
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btnPercent"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_percent" />
            <Button
                android:id="@+id/btnClearE"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_clearE" />
            <Button
                android:id="@+id/btnClearAll"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_clearAll" />
            <Button
                android:id="@+id/btnBackspace"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_backspace"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btnInverse"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_inverse" />
            <Button
                android:id="@+id/btnSquare"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_square" />
            <Button
                android:id="@+id/btnSqrt"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_sqrt" />
            <Button
                android:id="@+id/btnDivide"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn7"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_7"/>
            <Button
                android:id="@+id/btn8"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_8"/>
            <Button
                android:id="@+id/btn9"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_9"/>
            <Button
                android:id="@+id/btnMultiplication"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_multiplication"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn4"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_4"/>
            <Button
                android:id="@+id/btn5"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_5"/>
            <Button
                android:id="@+id/btn6"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_6"/>
            <Button
                android:id="@+id/btnMinus"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_minus"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn1"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_1"/>
            <Button
                android:id="@+id/btn2"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_2"/>
            <Button
                android:id="@+id/btn3"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_3"/>
            <Button
                android:id="@+id/btnPlus"
                style="@style/ButtonOperation"
                android:text="@string/btn_calc_plus"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btnPlusMinus"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_plus_minus"/>
            <Button
                android:id="@+id/btn0"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_0"/>
            <Button
                android:id="@+id/btnComma"
                style="@style/ButtonDigit"
                android:text="@string/btn_calc_comma"/>
            <Button
                android:id="@+id/btnEqual"
                style="@style/ButtonEqual"
                android:text="@string/btn_calc_sum"/>
        </TableRow>

    </TableLayout>

</LinearLayout>